# CmmuuMusic

./: .gitignore  CmmuuMusic_TauriV2_SDD.md  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.node.json  vite.config.ts
.github/workflows/: ci.yml  release-build.yml
docs/: README.ja.md  README.ko.md  README.zh-CN.md
src/: main.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/sources/builtin/: changqing-svip-v1.2.0.js
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: history.rs  lyrics.rs  mod.rs  player.rs  playlist.rs  plugin.rs  search.rs  settings.rs
src-tauri/src/core/: mod.rs
src-tauri/src/core/audio/: decoder.rs  engine.rs  mod.rs  pipeline.rs  visualizer.rs
src-tauri/src/core/cache/: metadata.rs  mod.rs  music.rs
src-tauri/src/core/config/: manager.rs  mod.rs
src-tauri/src/core/db/: migrations.rs  mod.rs  models.rs
src-tauri/src/core/lyrics/: engine.rs  mod.rs  parser.rs
src-tauri/src/core/playlist/: manager.rs  mod.rs
src-tauri/src/core/plugin/: api.rs  converter.rs  loader.rs  manager.rs  mod.rs  sandbox.rs
src-tauri/src/core/search/: aggregator.rs  demo.rs  mod.rs
src-tauri/src/types/: mod.rs  music.rs  playlist.rs  plugin.rs  search.rs
src-tauri/src/utils/: crypto.rs  mod.rs  path.rs  request.rs
src/api/: commands.ts
src/router/: index.ts
src/stores/: player.ts  playlist.ts  plugin.ts  search.ts  settings.ts
src/styles/: main.css
src/types/: index.ts
src/views/: HomeView.vue  LocalView.vue  RecentView.vue  (+3 more)
(+4 files in other folders)
